--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "gorenicny-bus",
+  "name": "horenicny-bus",
+  "homepage": "https://utof0.github.io/horenicny-bus",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
