--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy Vite React to GitHub Pages
+name: Deploy Vite React to GitHub Pages (Bun)
 
 on:
   push:
     branches:
-      - main # Deploy when pushing to main
+      - main # deploy when pushing to main
 
 permissions:
   contents: read
@@ -17,17 +17,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: 20
-          cache: npm
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install
 
       - name: Build project
-        run: npm run build
+        run: bun run build
 
       - name: Upload production-ready build
         uses: actions/upload-pages-artifact@v3
